--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@material-tailwind/react": "2.1.4",
     "apexcharts": "3.44.0",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-apexcharts": "1.4.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.17.0",
     "react-toastify": "^10.0.6"
